--- a/shop/products/templates/product_detail.html
+++ b/shop/products/templates/product_detail.html
@@ -6,26 +6,23 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Shop Homepage - Start Bootstrap Template</title>
+        <title>{{ product.name }} - Shop Item</title>
         <!-- Favicon-->
-        <!-- <link rel="icon" type="image/x-icon" href="shop/products/static/assets/favicon.ico" /> -->
         <link rel="icon" type="image/x-icon" href="{% static 'assets/favicon.ico' %}" />
-        
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <!-- <link href="shop/products/static/css/styles.css" rel="stylesheet" /> -->
-        <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
+        <link href="{% static 'css/styles_item.css' %}" rel="stylesheet" />
     </head>
     <body>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#!">Start Bootstrap</a>
+                <a class="navbar-brand" href="#!">Shop</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'home_index' %}">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
@@ -47,40 +44,60 @@
                 </div>
             </div>
         </nav>
-        <!-- Header-->
-        <header class="bg-dark py-5">
+        <!-- Product section-->
+        <section class="py-5">
             <div class="container px-4 px-lg-5 my-5">
-                <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder"> BIENVENUE a Dominantis Shop</h1>
-                    <p class="lead fw-normal text-white-50 mb-0">With this shop homeage template</p>
+                <div class="row gx-4 gx-lg-5 align-items-center">
+                    <!-- Image du produit -->
+                    <div class="col-md-6">
+                        <img class="card-img-top mb-5 mb-md-0" src="{{ product.image.url }}" alt="{{ product.name }}" />
+                    </div>
+                    <div class="col-md-6">
+                        <div class="small mb-1">Code: BST-{{ product.id }}</div>
+                        <!-- Nom du produit -->
+                        <h1 class="display-5 fw-bolder">{{ product.name }}</h1>
+                        <!-- Prix -->
+                        <div class="fs-5 mb-5">
+                            <span>{{ product.price }} Fcfa</span>
+                        </div>
+                        <!-- Description -->
+                        <p class="lead">Description du produit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium at dolorem quidem modi. Nam sequi consequatur obcaecati excepturi alias magni, accusamus eius blanditiis delectus ipsam minima ea iste laborum vero?</p>
+                        <div class="d-flex">
+                            <!-- Quantité -->
+                            <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1" style="max-width: 3rem" />
+                            <!-- Bouton ajouter au panier -->
+                            <button class="btn btn-outline-dark flex-shrink-0" type="button">
+                                <i class="bi-cart-fill me-1"></i>
+                                Ajouter au panier
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </header>
-
-        <!-- Section-->
-        <section class="py-5">
+        </section>
+        
+        <!-- Related items section-->
+        <section class="py-5 bg-light">
             <div class="container px-4 px-lg-5 mt-5">
+                <h2 class="fw-bolder mb-4">Autres articles</h2>
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-                    {% for product in products %}
+                    {% for item in related_products %}
                     <div class="col mb-5">
                         <div class="card h-100">
-                            <!-- Product image-->
-                            <img class="card-img-top" src="{{ product.image.url }}" alt="{{ product.name }}" />
-                            <!-- Product details-->
+                            <!-- Image du produit -->
+                            <img class="card-img-top" src="{{ item.image.url }}" alt="{{ item.name }}" />
+                            <!-- Détails du produit -->
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">{{ product.name }}</h5>
-                                    <!-- Product price-->
-                                    {{ product.price }} Fcfa
+                                    <!-- Nom du produit -->
+                                    <h5 class="fw-bolder">{{ item.name }}</h5>
+                                    <!-- Prix du produit -->
+                                    ${{ item.price }}
                                 </div>
                             </div>
-                            <!-- Product actions-->
+                            <!-- Actions du produit -->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center">
-                                    <a class="btn btn-outline-dark mt-auto" href="{% url 'product_detail' product.id %}">View details</a>
-                                    <a class="btn btn-outline-dark mt-auto" href="{% url 'cart' %}">Add to cart</a>
-                                </div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'product_detail' item.id %}">Voir le produit</a></div>
                             </div>
                         </div>
                     </div>
@@ -88,7 +105,6 @@
                 </div>
             </div>
         </section>
-
         <!-- Footer-->
         <footer class="py-5 bg-dark">
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Dominatis 2024</p></div>
@@ -96,7 +112,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <!-- <script src="shop/products/static/js/scripts.js"></script> -->
-        <script src="{% static 'js/script.js' %}"></script>
+        <script src="{% static 'js/scripts_item.js' %}"></script>
     </body>
 </html>
