--- a/shop/products/templates/product_detail.html
+++ b/shop/products/templates/product_detail.html
@@ -34,7 +34,7 @@
                             </ul>
                         </li>
                     </ul>
-                    <form class="d-flex">
+                    <form class="d-flex" method="get" action="{% url 'add_to_cart' product.id %}">
                         <button class="btn btn-outline-dark" type="submit">
                             <i class="bi-cart-fill me-1"></i>
                             Cart
@@ -62,15 +62,19 @@
                         </div>
                         <!-- Description -->
                         <p class="lead">Description du produit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium at dolorem quidem modi. Nam sequi consequatur obcaecati excepturi alias magni, accusamus eius blanditiis delectus ipsam minima ea iste laborum vero?</p>
-                        <div class="d-flex">
-                            <!-- Quantité -->
-                            <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1" style="max-width: 3rem" />
-                            <!-- Bouton ajouter au panier -->
-                            <button class="btn btn-outline-dark flex-shrink-0" type="button">
-                                <i class="bi-cart-fill me-1"></i>
-                                Ajouter au panier
-                            </button>
-                        </div>
+                        <form method="post" action="{% url 'add_to_cart' product.id %}">
+                            {% csrf_token %}
+                            <div class="d-flex">
+                                <!-- Quantité -->
+                                <input class="form-control text-center me-3" id="inputQuantity" name="quantity" type="num" value="1" style="max-width: 3rem" />
+                                <!-- Bouton ajouter au panier -->
+                                <button class="btn btn-outline-dark flex-shrink-0" type="submit">
+                                    <i class="bi-cart-fill me-1"></i>
+                                    Ajouter au panier
+                                </button>
+                            </div>
+                        </form>
+
                     </div>
                 </div>
             </div>
