--- a/shop/products/templates/home_index.html
+++ b/shop/products/templates/home_index.html
@@ -21,27 +21,26 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#!">Start Bootstrap</a>
+                <a class="navbar-brand" href="#!">Shop</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#!">A propos</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#!">All Products</a></li>
+                                <li><a class="dropdown-item" href="#!">Produits</a></li>
                                 <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="#!">Popular Items</a></li>
-                                <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
+                                <li><a class="dropdown-item" href="#!">Article Populaire</a></li>
+                                <li><a class="dropdown-item" href="#!">Nouveatés</a></li>
                             </ul>
                         </li>
                     </ul>
                     <form class="d-flex" method="get" action="{% url 'cart_view' %}">
                         <button class="btn btn-outline-dark" type="submit">
                             <i class="bi-cart-fill me-1"></i>
-                            Cart
-                            <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                            Panier
                         </button>
                     </form>
                 </div>
@@ -52,7 +51,7 @@
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
                     <h1 class="display-4 fw-bolder"> BIENVENUE a Dominantis Shop</h1>
-                    <p class="lead fw-normal text-white-50 mb-0">With this shop homeage template</p>
+                    <p class="lead fw-normal text-white-50 mb-0">Votre site pour trouver tout ce que vous voulez</p>
                 </div>
             </div>
         </header>
@@ -78,10 +77,10 @@
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                                 <div class="text-center">
-                                    <a class="btn btn-outline-dark mt-auto" href="{% url 'product_detail' product.id %}">View details</a>
+                                    <a class="btn btn-outline-dark mt-auto" href="{% url 'product_detail' product.id %}">Voir plus</a><br>
                                     <form method="post" action="{% url 'add_to_cart' product.id %}">
                                         {% csrf_token %}
-                                        <a class="btn btn-outline-dark mt-auto" href="{% url 'add_to_cart' product.id %}" type="submit">Add to cart</a>
+                                        <a class="btn btn-outline-dark mt-auto" href="{% url 'add_to_cart' product.id %}" type="submit">Ajouter au panier</a>
                                     </form>                                   
                                 </div>
                             </div>
